--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "watch:portal": "lerna run watch:portal --stream --concurrency 6",
@@ -19,7 +21,7 @@
     "@babel/preset-stage-0": "^7.0.0-rc.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^7.1.4",
-    "lerna": "^3.0.4"
+    "lerna": "^3.14.1"
   },
   "name": "single-spa-portal-example"
 }
